@@ -1,3 +1,9 @@
+2008-06-17  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/PJ_tmerc.c: Ensure that tmerc forward projection inputs are
+	within 90 degrees of the central meridian.  This should be considered
+	a preliminary patch until such time as Gerald comes up with a better
+	solution.  http://trac.osgeo.org/proj/ticket/5
 
 2008-04-24  Frank Warmerdam  <warmerdam@pobox.com>
 
